--- a/0x02-i18n/translations/en/LC_MESSAGES/messages.po
+++ b/0x02-i18n/translations/en/LC_MESSAGES/messages.po
@@ -1,15 +1,15 @@
 # English translations for PROJECT.
 # Copyright (C) 2023 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
+# Kevin Kinyua <w.kevinkinyua@gmail.com>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
-"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
+"Report-Msgid-Bugs-To: w.kevinkinyua@gmail.com\n"
 "POT-Creation-Date: 2023-11-01 11:12+0000\n"
 "PO-Revision-Date: 2023-11-01 11:12+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Kevin Kinyua <w.kevinkinyua@gmail.com>\n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -18,3 +18,5 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
+msgid "home_title"
+msgstr "Welcome to Holberton"
